Release Notes

* 6/28/2016
  * fixed AtlasPWD for deleted datasets
  * fixed TC for paused

* 6/24/2016
  * enabled history-aware brokerage for analysis
  * added splitByFields

* 6/23/2016
  * using longer lifetime for unmerged datasets when AOD merge is not very successful
  * added useFileAsSourceLFN
  * added forceAvalanche
  * put logrotate file to etc/panda to avoid automatic installation on test nodes

* 6/20/2016
  * using _tid\d+ as a deliminator for NthField
  * setting ramCount=2000 for anal tasks by default
  * using eventService=2 for tasks with JC
  * enabled space check in AtlasPJB

* 6/13/2016
  * changed not to reset errorDiag until next JG attempt
  * fixed 24h timeout in AtlasPJB to send pmerge to remote sites

* 6/11/2016
  * changed TR not to update the same task simultaneously

* 6/8/2016
  * increased space limit to 100TB in AtlasPTB

* 6/6/2016
  * using rucio in registerDatasetSubscription
  * fixed AtlasPWD to use Production Output for subscriptions

* 6/2/2016
  * removed scope from tmpin

* 5/25/2016
  * changed AtlasPTB to send more log messages
  * added writeInputToFile
  * set nqueuelimit to 10k for opportunistic

* 5/24/2016
  * changes for failedAttempt and hs06sec in job

* 5/18/2016
  * removed maxinputsize from JG

* 5/16/2016
  * fixed ZeroDivision error in AtlasPTB
  * changed AtlasPTB to skip data locality check when no nucleus has data

* 5/12/2016
  * changed t1weight based on IO intensity

* 5/11/2016
  * added getFailureCountsForTask_JEDI
  * changed lifetime of um.log to 365 days

* 5/6/2016
  * changed JG not to lock when nQueued<nQueueLimit
  * set maxNumJobs=nQueueLimit/10 when nQueued<nQueueLimit

* 5/4/2016
  * fixed lockedBy IS NULL in getTaskDatasetsWithID_JEDI 
  * changed lifetime of transient datasets to 14 days

* 5/3/2016
  * changed job brokerages to use mergeRamCount for pmerge

* 5/2/2016
  * updated to second version of network brokerage
  * changed AtlasPJB to ignore t1w for pmerge